--- a/view/next-project/src/assets/base.css
+++ b/view/next-project/src/assets/base.css
@@ -9,6 +9,9 @@
   --text-primary: #333333;
   --text-secondary: white;
 
+  --button-primary: #34dde8;
+  --button-secondary: #3492e8;
+
   --hover: rgba(0, 0, 0, 0.075);
   --hover-1: rgba(0, 0, 0, 0.15);
   --hover-2: rgba(0, 0, 0, 0.25);
@@ -38,12 +41,13 @@
   --accent-9: #000;
 
   --card-radius: 25px;
+  --button-radius: 50px;
 
-  --font-sans: -apple-system, system-ui, BlinkMacSystemFont, 'Helvetica Neue',
-    'Helvetica', sans-serif;
+  --font-sans: -apple-system, system-ui, BlinkMacSystemFont, "Helvetica Neue",
+    "Helvetica", sans-serif;
 }
 
-[data-theme='dark'] {
+[data-theme="dark"] {
   --primary: #000000;
   --primary-2: #111;
   --secondary: #ffffff;
