[fix]secondary-colorとタグ、コンポーネント名の修正

--- a/view/next-project/src/assets/base.css
+++ b/view/next-project/src/assets/base.css
@@ -1,7 +1,7 @@
 :root {
   --primary: #ffac5d;
   --primary-2: #f1f3f5;
-  --secondary: #000000;
+  --secondary: #ffffff;
   --secondary-2: #111;
   --selection: var(--cyan);
 
