--- a/view/next-project/src/assets/base.css
+++ b/view/next-project/src/assets/base.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700&display=swap');
+
 :root {
   --primary: #ffac5d;
   --primary-2: #f1f3f5;
@@ -43,7 +45,7 @@
   --card-radius: 25px;
   --button-radius: 50px;
 
-  --font-sans: -apple-system, system-ui, BlinkMacSystemFont, 'Helvetica Neue', 'Helvetica', sans-serif;
+  --font-sans: -apple-system, system-ui, BlinkMacSystemFont,'Inter', sans-serif;
 }
 
 [data-theme='dark'] {
@@ -76,9 +78,13 @@
 *:before,
 *:after {
   box-sizing: inherit;
+  padding: 0;
+  margin: 0;
 }
 
 html {
+  font-family: 'Inter', sans-serif;
+  font-size: 62.5%;
   height: 100%;
   box-sizing: border-box;
   touch-action: manipulation;
@@ -89,7 +95,6 @@ html {
 
 html,
 body {
-  font-family: var(--font-sans);
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -102,6 +107,20 @@ body {
   position: relative;
   min-height: 100%;
   margin: 0;
+}
+
+h2 {
+  font-size: 2.4rem;
+  font-weight: 500;
+}
+
+h3 {
+  font-size: 2rem;
+  font-weight: 300;
+}
+
+p {
+  font-size: 1.2rem;
 }
 
 a {
