--- a/view/next-project/src/components/common/ListHeader/ListHeader.module.css
+++ b/view/next-project/src/components/common/ListHeader/ListHeader.module.css
@@ -17,3 +17,10 @@
   justify-content: end;
   align-items: center;
 }
+
+.SplitLeftContainer h1 {
+  font-size: 2.4rem;
+  font-weight: 700;
+  color: var(--text-secondary);
+  overflow: auto;
+}
