--- a/view/next-project/src/components/common/FlatCard/FlatCard.module.css
+++ b/view/next-project/src/components/common/FlatCard/FlatCard.module.css
@@ -10,6 +10,16 @@
   font-size: 1.6rem;
 }
 
+.FlatCardContainer a h2{
+  color: var(--primary);
+  font-size: 2.6rem;
+}
+
+.FlatCardContainer a{
+  color: var(--accent-5);
+  font-size: 1.4rem;
+}
+
 .align-start {
   align-items: start;
 }
@@ -32,4 +42,12 @@
 
 .justify-end {
   justify-content: end;
+}
+
+.gap-s {
+  gap: 3rem;
+}
+
+.gap-m {
+  gap: 10rem;
 }
