--- a/view/next-project/src/assets/base.css
+++ b/view/next-project/src/assets/base.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;500;700&display=swap');
-
 :root {
   --primary: #ffac5d;
   --primary-2: #f1f3f5;
@@ -101,13 +99,17 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--primary);
   color: var(--text-primary);
-  overscroll-behavior-x: none;
 }
 
 body {
   position: relative;
   min-height: 100%;
   margin: 0;
+}
+
+h1 {
+  font-size: 3rem;
+  font-weight: 700;
 }
 
 h2 {
