--- a/view/next-project/src/components/common/FlatCard/FlatCard.module.css
+++ b/view/next-project/src/components/common/FlatCard/FlatCard.module.css
@@ -20,6 +20,14 @@
   font-size: 1.4rem;
 }
 
+.height-100 {
+  height: 100%;
+}
+
+.height-auto {
+  height: auto;
+}
+
 .align-start {
   align-items: start;
 }
