--- a/view/next-project/src/components/common/RegistUserDetail/RegistUserDetail.module.css
+++ b/view/next-project/src/components/common/RegistUserDetail/RegistUserDetail.module.css
@@ -14,12 +14,13 @@
   gap: 10px;
 }
 
-.formContainer input {
+.formContainer input, 
+.formContainer select, 
+.formContainer textarea {
   width: 300px;
-  height: 40px;
   font-size: 12px;
   background: none;
-  padding: 0px 20px;
+  padding: 1rem 1rem;
   border: 1px solid var(--accent-0);
   border-image: linear-gradient(to right, var(--text-base) 0%, var(--primary) 100%);
   border-image-slice: 1;
@@ -27,7 +28,9 @@
   transition: all 0.2s 0s ease;
 }
 
-.formContainer input:focus {
+.formContainer input:focus,
+.formContainer select:focus,
+.formContainer textarea:focus {
   border: 1px solid var(--primary);
   z-index: 10;
   outline: 0;
