--- a/view/next-project/src/assets/base.css
+++ b/view/next-project/src/assets/base.css
@@ -108,22 +108,37 @@ body {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 3.2rem;
   font-weight: 700;
 }
 
 h2 {
-  font-size: 2.4rem;
+  font-size: 2.8rem;
   font-weight: 500;
 }
 
 h3 {
+  font-size: 2.4rem;
+  font-weight: 500;
+}
+
+h4 {
   font-size: 2rem;
-  font-weight: 300;
+  font-weight: 500;
+}
+
+h5 {
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+
+h6 {
+  font-size: 1.2rem;
+  font-weight: 500;
 }
 
 p {
-  font-size: 1.2rem;
+  font-size: 1.6rem;
 }
 
 a {
@@ -160,4 +175,12 @@ a {
   to {
     opacity: 1;
   }
+}
+
+li {
+  margin: 1rem;
+  font-size: 1.6rem;
+}
+
+ul li::marker {
 }
