--- a/view/next-project/src/components/layout/MainLayout/MainLayout.module.css
+++ b/view/next-project/src/components/layout/MainLayout/MainLayout.module.css
@@ -6,4 +6,15 @@
   padding: 100px 200px;
   margin-top: 60px;
   gap: 50px 0px;
+  animation: fadeIn .3s ease 0s 1 alternate none running;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
 }
