--- a/view/next-project/src/components/common/AddModal/AddModal.module.css
+++ b/view/next-project/src/components/common/AddModal/AddModal.module.css
@@ -44,6 +44,7 @@
 
 .modalContent div div {
   width: 100%;
+  height: 50rem;
   display: flex;
   justify-content: start;
   align-items: start;
@@ -53,12 +54,11 @@
 
 .modalContent div div div {
   width: 50%;
-  height: 50rem;
   display: flex;
   justify-content: start;
   align-items: start;
   flex-flow: column;
-  flex-wrap: wrap;
+  overflow: scroll;
 }
 
 .modalContent input {
