--- a/view/next-project/src/components/common/Tag/Tag.module.css
+++ b/view/next-project/src/components/common/Tag/Tag.module.css
@@ -1,6 +1,7 @@
 .Tag {
   background: var(--text-secondary);
   border: none;
+  margin: 0 5px;
   margin-bottom: 20px;
   border-radius: var(--button-radius);
   text-align: center;
