--- a/view/next-project/src/pages/records/[id]/index.module.css
+++ b/view/next-project/src/pages/records/[id]/index.module.css
@@ -1,15 +1,33 @@
 .recordContentsContainer {
   width: 100%;
+  margin-bottom: 20px;
 }
-.recordContentsTitle {
+.contentsTitle {
+  margin-top: 2rem;
   font-size: 2.8rem;
-  padding-bottom: 1.2rem;
+  margin-bottom: 2rem;
+  padding-left: 10px;
+  font-weight: bold;
+  font-size: 3.6rem;
+  border-left: 6px solid var(--primary);
 }
 .recordContents {
   font-size: 1.6rem;
   padding-top: 1rem;
   padding-bottom: 3rem;
+  margin: 20px 0;
 }
+.homeworkContentsContainer {
+  width: 100%;
+  margin: 20px 0;
+}
+.recordContents {
+  font-size: 1.6rem;
+  padding-top: 1rem;
+  padding-bottom: 3rem;
+  margin: 20px 0;
+}
+
 .parentButton {
   position: relative;
   width: 100%;
@@ -26,12 +44,12 @@
 .markdown h1 {
   padding-bottom: 0.2em;
   margin-bottom: 1.1rem;
-  border-bottom: 1px solid #5c93bb2b;
+  border-bottom: 2px solid #ddd;
 }
 .markdown h2 {
   margin-top: 1em;
   margin-bottom: 0.5em;
-  border-bottom: 1px solid #5c93bb2b;
+  border-bottom: 1px solid #ddd;
 }
 .markdown h3 {
   margin-top: 1em;
@@ -63,4 +81,12 @@
 
 .markdown ul li {
   margin: 0.4rem 0;
+}
+
+/* コードブロックではないコードハイライト用 */
+.markdown code:not(pre) {
+  padding: 0 0.5rem;
+  background-color: #f5f5f5;
+  color: #657b83;
+  font-family: 'Roboto Mono';
 }
