[fix] submit button position

--- a/view/next-project/src/components/common/RecordEditModal/RecordEditModal.module.css
+++ b/view/next-project/src/components/common/RecordEditModal/RecordEditModal.module.css
@@ -132,5 +132,11 @@
   align-items: center;
 }
 
+.modalSubmitButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .textButton:active {
 }
