--- a/view/next-project/src/components/common/FlatCard/FlatCard.module.css
+++ b/view/next-project/src/components/common/FlatCard/FlatCard.module.css
@@ -10,6 +10,19 @@
   font-size: 1.6rem;
 }
 
+.ClickableFlatCardContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-flow: column;
+  background-color: var(--accent-0);
+  border-radius: var(--card-radius);
+  padding: 50px;
+  margin: 0px;
+  font-size: 1.6rem;
+  cursor: pointer;
+}
+
 .FlatCardContainer a h2 {
   color: var(--primary);
   font-size: 2.6rem;
