--- a/view/next-project/src/components/common/RecordAddAnimation/RecordAddAnimation.module.css
+++ b/view/next-project/src/components/common/RecordAddAnimation/RecordAddAnimation.module.css
@@ -17,6 +17,18 @@
   font-size: 8rem;
   font-weight: 700;
   color: #fff;
+  animation: bounce 1s infinite;
+}
+
+@keyframes bounce {
+  0%, 100% {
+    transform: translateY(-25%);
+    animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+  }
+  50% {
+    transform: translateY(0);
+    animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
+  }
 }
 
 .buttons {
@@ -31,4 +43,5 @@
   width: 100%;
   height: 100%;
   z-index: -1;
+  background-color: rgba(255, 0, 0, 0);
 }
