--- a/view/next-project/src/components/common/HeaderMenu/HeaderMenu.module.css
+++ b/view/next-project/src/components/common/HeaderMenu/HeaderMenu.module.css
@@ -16,7 +16,7 @@
 
 .button:hover {
   background-color: white;
-  color: black;
+  color: var(--primary);
   transition: 0.25s;
 }
 
@@ -42,9 +42,16 @@
   padding: 0.5rem 1rem;
   border-radius: 0.5rem;
   font-size: 1.5rem;
+  border: none;
+  background-color: white;
+  background-color: var(--background-color);
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
 }
 
 .menuItem:hover {
   box-shadow: 0 0 0.25rem 0.25rem rgba(0, 0, 0, 0.1);
   transition: 0.25s;
+  color: var(--primary);
 }
