--- a/view/next-project/src/components/common/FlatCard/FlatCard.module.css
+++ b/view/next-project/src/components/common/FlatCard/FlatCard.module.css
@@ -23,6 +23,11 @@
   cursor: pointer;
 }
 
+.ClickableFlatCardContainer:hover {
+  box-shadow: 0 0 10px 0 var(--accent-5);
+  transition: box-shadow 0.2s ease-in-out;
+}
+
 .FlatCardContainer a h2 {
   color: var(--primary);
   font-size: 2.6rem;
