--- a/view/next-project/src/components/common/ChangeChapterOrderModal/ChangeChapterOrderModal.module.css
+++ b/view/next-project/src/components/common/ChangeChapterOrderModal/ChangeChapterOrderModal.module.css
@@ -93,6 +93,20 @@
 .orderArea {
   width: 20%;
 }
+
+.orderArea input {
+  height: 3rem;
+  font-size: 1.5rem;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  border: 1px solid var(--accent-4);
+}
+
+.orderArea input:focus {
+  border: 1px solid var(--primary);
+  outline: 1px solid var(--primary);
+}
+
 .chapter {
   width: 70%;
   height: 10rem;
