--- a/view/next-project/src/components/common/MemberSearchButton/index.module.css
+++ b/view/next-project/src/components/common/MemberSearchButton/index.module.css
@@ -1,16 +1,13 @@
 .button {
-    width: 200px;
-    height: 55px;
+    width: 130px;
+    height: 40px;
     background-image: linear-gradient(90deg, rgba(52, 221, 232, 1), rgba(52, 146, 232, 1));
     z-index: 10;
-    position: absolute;
-    top: 20%;
-    left: 50%;
-    transform: translate(-50%, -50%); 
+    /* position: absolute; */
     border-radius: 50px;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
     border: none;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     font-weight: 700;
     color: #FFFFFF;
 }
