--- a/view/next-project/src/components/layout/MainLayout/MainLayout.module.css
+++ b/view/next-project/src/components/layout/MainLayout/MainLayout.module.css
@@ -3,10 +3,10 @@
   display: flex;
   flex-flow: column;
   align-items: center;
-  padding: 100px 200px;
+  padding: 50px 100px;
   margin-top: 60px;
   gap: 50px 0px;
-  animation: fadeIn .5s ease 0s 1 alternate none running;
+  animation: fadeIn 0.5s ease 0s 1 alternate none running;
 }
 
 @keyframes fadeIn {
