--- a/view/next-project/src/components/common/BackButton/BackButton.module.css
+++ b/view/next-project/src/components/common/BackButton/BackButton.module.css
@@ -1,4 +1,5 @@
 .ButtonContainer {
+  pointer-events: none;
   z-index: 10;
   top: 0;
   left: 0;
@@ -17,6 +18,7 @@
 }
 
 .ButtonContainer button {
+  pointer-events: auto;
   z-index: 10;
   background: radial-gradient(var(--button-primary), var(--button-secondary));
   width: 60px;
