feat: icon用のcssを追加

--- a/view/next-project/src/components/common/ProfileEditForm/ProfileEditForm.module.css
+++ b/view/next-project/src/components/common/ProfileEditForm/ProfileEditForm.module.css
@@ -84,3 +84,14 @@
   display: flex;
   justify-content: center;
 }
+
+.icon-container{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 2rem 0;
+}
+
+.icon{
+  width: 40%;
+}
