--- a/view/next-project/src/components/common/RecordAddModal/RecordAddModal.module.css
+++ b/view/next-project/src/components/common/RecordAddModal/RecordAddModal.module.css
@@ -2,11 +2,9 @@
   top: 0;
   left: 0;
   position: fixed;
-  padding: 100px;
   height: 100%;
   width: 100%;
-  z-index: 11;
-  background-color: rgba(51, 51, 51, 0.3);
+  z-index: 50;
   overflow: auto;
 }
 
@@ -20,135 +18,207 @@
 
 .modalContent {
   width: 100%;
-  z-index: 15;
   display: flex;
   flex-flow: column;
   padding: 50px 50px;
-  color: var(--accent-7);
-  border-radius: var(--card-radius);
-  background: radial-gradient(ellipse at top left, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.6));
-  backdrop-filter: blur(10px);
-  gap: 30px;
+  background-color: #ffac5d;
 }
 
-.contentsTitle {
-  width: 100%;
+.modalHeader {
   display: flex;
-  justify-content: start;
-  align-items: start;
-  flex-flow: row;
-  flex-wrap: nowrap;
+  justify-content: space-between;
+  margin-bottom: 3rem;
 }
 
-.modalContentContents {
-  width: 100%;
-  display: flex;
-  justify-content: start;
-  align-items: start;
-  flex-flow: row;
-  flex-wrap: nowrap;
-}
-
-.contentsMde {
-  width: 100%;
-}
-
-.contentsMde span {
-  font-size: 16px;
-  background-color: #fff;
-}
-
-.homeworkMde {
-  width: 100%;
-}
-
-.homeworkMde span {
-  font-size: 16px;
-  background-color: #fff;
-}
-
-.modalContent input {
-  font-size: 1.6rem;
-  width: 100%;
-  letter-spacing: 1px;
-  color: var(--accent-6);
-  background: none;
-  border: 1px solid var(--accent-4);
-  padding: 10px;
-}
-
-.modalContent input:focus {
-  border: 1px solid var(--button-secondary);
-  z-index: 10;
-  outline: 0;
-}
-
-.modalContent textarea {
-  font-size: 1.6rem;
-  width: 50%;
-  height: 50rem;
-  color: var(--accent-6);
-  background: none;
-  border: 1px solid var(--accent-4);
-  padding: 10px;
-}
-
-.modalContent textarea:focus {
-  border: 1px solid var(--button-secondary);
-  z-index: 10;
-  outline: 0;
-}
-
-.modalContent select {
-  font-size: 1.6rem;
-  width: 100%;
-  letter-spacing: 1px;
-  color: var(--accent-6);
-  background: none;
-  border: 1px solid var(--accent-4);
-  padding: 10px;
-}
-
-.modalContent select:focus {
-  border: 1px solid var(--button-secondary);
-  z-index: 10;
-  outline: 0;
-}
-
-.modalName {
-  display: flex;
-  justify-content: center;
+.closeButton {
+  flex-grow: 0;
   align-items: center;
 }
 
-.modalContentClose {
+.modalButtons {
   display: flex;
-  justify-content: start;
-  align-items: start;
+  margin-top: 12px;
+  align-items: center;
+  gap: 2rem; 
 }
 
-.modalContentCloseIcon {
-  background: none;
-  border: none;
-  margin: -20px;
-  border-radius: var(--button-radius);
-  text-align: center;
-  font-size: 2.8rem;
-  color: var(--button-secondary);
+.releaseToggle {
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
 .modalSubmitButton {
   display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-.textButton:active {
+.inputWrap {
+  position: relative;
+  width: 85%;
+  margin-bottom: 2rem;
 }
 
-.releaseToggle{
-  font-size: 1.6rem;
+.textBox {
+  width: 100%;
+  padding: 15px;
+  border: none;
+  border-radius: 10px;
+  font-size: 16px;
+  outline: none;
+  position: relative;
+  z-index: 1;
+  background-color: #FFB773;
+  border: 1px solid rgba(255, 183, 115, 0.5);
+  background-clip: padding-box;
+  color: #FFF;
+  font-weight: bold;
+}
+
+.textBox::placeholder {
+  color: white;
+}
+
+.label {
+  position: absolute;
+  top: 18px;
+  left: 20px;
+  font-size: 24px;
+  color: #a0a0a0;
+  transition: all 0.25s ease;
+  z-index: 0;
+  font-weight: bold;
+}
+
+.focus {
+  top: -24px;
+  left: 10px;
+  font-size: 14px;
+  color: white;
+}
+
+.recordContent {
+  display: flex;
+}
+
+.editorSection {
+  width: 65%;
+  padding-left: 48px;
+}
+
+.titleInput {
+  padding: 10px;
+  border: none;
+  background-color: #FFB773;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.mdeWrapper {
+  border: 16px solid #F8F8F8;
+  border-radius: 16px;
+  padding: 4px; 
+  background-color: white;
+  margin-bottom: 5rem;
+}
+
+.simpleMde {
+  width: 100%;
+  height: auto;
+  z-index: 55;
+}
+
+.selectSection {
+  width: 35%;
+  padding-left: 4rem;
+  margin-top: 68px;
+}
+
+.selectSection {
+  display: flex;
+  flex-direction: column;
+}
+
+.selectLabel {
+  font-size: 14px;
+  color: #666;
+  margin: 8px;
+  margin-bottom: 12px;
+}
+
+.selectWrapper {
+  position: relative;
+  border: none;
+  border-radius: 10px;
+  background: #FFFFFF;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  overflow: hidden;
+  height: 8rem;
+  margin-bottom: 2rem;
+}
+
+.selectWrapper select {
+  text-align: center;
+  width: 100%;
+  border: none;
+  border-radius: 10px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background-color: transparent;
+  cursor: pointer;
+  font-size: 16px;
+  color: #333;
+  outline: none;
+  font-weight: bold;
+}
+
+.toggle {
+  position: relative;
+  width: 150px;
+  height: 42px;
+  border-radius: 20px;
+  overflow: hidden;
+  cursor: pointer;
+  background: #f45e55;
+  transition: background-color 0.2s;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.toggle.checked {
+  background: #4be9ac;
+}
+
+.toggle input[type=checkbox] {
+  display: none;
+}
+
+.toggle:before {
+  content: "Not Release";
+  position: absolute;
+  top: 50%;
+  left: 30px;
+  transform: translateY(-50%);
+  color: #fff;
+  font-size: 14px; /* 文字サイズを調整 */
+  transition: 0.2s ease-out;
+}
+
+.toggle:after {
+  content: "Release";
+  position: absolute;
+  top: 50%;
+  right: 14px; /* 調整された位置 */
+  transform: translateY(-50%) translateX(100%);
+  width: 130px; /* 更新されたラベル幅 */
+  color: #fff;
+  font-size: 14px; /* 文字サイズを調整 */
+  text-align: center;
+  transition: 0.2s ease-out;
+}
+
+.toggle.checked:before {
+  transform: translateY(-50%) translateX(-300%);
+}
+
+.toggle.checked:after {
+  transform: translateY(-50%);
 }
