--- a/view/next-project/src/components/common/RecordEditModal/RecordEditModal.module.css
+++ b/view/next-project/src/components/common/RecordEditModal/RecordEditModal.module.css
@@ -24,6 +24,12 @@
   background-color: #ffac5d; /* RecordAddModal と同じ背景色 */
 }
 
+.editrecordtitle{
+  padding-bottom: 3rem;
+  color: #FFF;
+  text-align:center;
+}
+
 /* ヘッダー */
 .modalHeader {
   display: flex;
